sass/components/_header.sass
body main
  margin-top: 146px

header
  background: var(--header-bg-color)
  border-radius: 0px 0px 10px 10px
  box-shadow: var(--header-shadow)
  display: flex
  justify-content: space-evenly
  padding: 30.5px 0
  align-items: center
  position: absolute
  width: 100%
  z-index: 10
  transition: 0.3s
  left: 0
  top: 0
  *
    display: flex
    align-items: center
    gap: 15px

  .left
    img
      width: 35px
    h2
      font-size: 25px
      b
        color: var(--cta-normal-color)
        margin-left: -7px
        font-weight: 600

  .right a
    color: var(--cta-normal-color)
    font-weight: 500
    font-size: 17px

    &:not(:last-of-type)::after
      content: "·"
      color: var(--text-color)
      font-weight: bolder
      pointer-events: none
  &.scroll
    border-radius: 15px
    padding: 17px 23px
    top: 20px
    left: 5%
    backdrop-filter: blur(3px) saturate(0.2)
    position: fixed
    width: 90%
    border: 3px solid var(--card-border-color)
    h2
      font-size: 22px
    img
      width: 30px


  #menuIcon
    display: none
    width: 60px
    height: 45px
    position: relative
    transform: rotate(0deg) scale(0.5)
    transition: 0.5s ease-in-out
    cursor: pointer

    &.open span
      &:nth-child(1)
        top: 18px
        width: 0%
        left: 50%

      &:nth-child(2)
        transform: rotate(45deg)

      &:nth-child(3)
        transform: rotate(-45deg)

      &:nth-child(4)
        top: 18px
        width: 0%
        left: 50%

    span
      display: block
      position: absolute
      height: 8px
      width: 100%
      background: var(--cta-light-color)
      border-radius: 9px
      opacity: 1
      left: 0
      transform: rotate(0deg)
      transition: 0.25s ease-in-out

  & span:nth-child(1)
    top: 0px

  & span:nth-child(2), & span:nth-child(3)
    top: 18px

  & span:nth-child(4)
    top: 36px

@media only screen and (max-width: 800px)
  header
    flex-wrap: wrap
    #menuIcon
      color: var(--text-color)
      fill: currentColor
      display: block

    .right
      margin-top: 15px
      flex-wrap: wrap
      display: none

      a
        break-after: always

        &:not(:last-of-type)::after
          content: ""

